# studai-prism

./: .dockerignore  .env.example  .gitignore  AI_ARCHITECTURE.md  Dockerfile  MIGRATION_REPORT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: azure-webapp.yml  ci.yml  deploy-aws.yml
calibration/: .gitignore  README.md  requirements.txt  run_all.py
calibration/jobs/: __init__.py  _base.py  agreement_s2.py  bias_audit.py  channelB_train.py  conformal_refresh.py  dif_audit.py  equate.py  evidence_onepager.py  growth_curve.py  irt_fit.py  rasch_facets.py  relay_detect.py  reliability.py  retest_s3.py  review_package.py  steering_s1.py  tech_manual.py  transfer_corr.py
calibration/tests/: test_phase3.py  test_relay_detect.py  test_smoke.py  test_stage2.py  test_track1.py  test_track4.py
desktop/: .gitignore  package-lock.json  package.json
desktop/shell-dist/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: PRISM_v2_System_Spec.md  evidence-bundle-schema-v1.json  pressure-probes-v1.md
docs/admin/: ADMIN_CONTROL_CENTRE_PLAN.md
docs/aws/: DEPLOYMENT.md  bedrock-runtime-policy.json
docs/design/: VOICE.md
public/: manifest.webmanifest  sw.js
scripts/: deploy-aws.ps1  deploy-azure.ps1  dev.js  loadtest.mjs  make-deploy-zip.ps1  tokenize-page.ps1
server/: .env.example  app.js  index.js  package-lock.json  package.json
src/: App.jsx  index.css  main.jsx
(+347 files in other folders)
