[package]
name = "prism-shell"
version = "1.0.0"
description = "Prism assessment shell — a dedicated exam window for proctored centers"
authors = ["StudAI One"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
